# neptune-f1

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  codecov.yml  pyproject.toml  requirements_dev.txt  setup.py
.github/: CODE_OF_CONDUCT.md
.github/ISSUE_TEMPLATE/: bug.yaml  bug.yml  bug_report.md
.github/actions/coverage/: action.yml
.github/actions/package/: action.yml
.github/workflows/: ci-cd-functional-test.yml  ci-cd-integration-tests.yml  ci-cd-mypy.yml  ci-cd-release.yml  ci-cd-run-functional.yml  ci-cd-run-integration.yml  ci-cd-run-tests.yml  ci-cd-run-unit.yml  full-tests-command.yml  functional-test.yml  help-command.yml  integration-tests.yml  mypy.yml  pre-commit-apply-command.yml  pre-commit.yml  release.yml  run-unit-command.yml  slash-commands.yml  unit-tests.yml
f1_2021/: packets.py  test.py  udp_server.py
f1_2021/domain/: car_damage.py  car_motion.py  car_status.py  cat_setup.py  lobby_info.py  session_history.py
f1_2021/packets/: packet_car_damage_data.py  packet_car_setup_data.py  packet_car_status_data.py  packet_car_telemetry_data.py  packet_event_data.py  packet_final_classification_data.py  packet_header.py  packet_lap_data.py  packet_lobby_info_data.py  packet_motion_data.py  packet_participants_data.py  packet_session_data.py  packet_session_history_data.py  utils.py
neptune_f1/domain/: car_motion.py  car_telemetry.py  lap.py  lobby_info.py  session.py
neptune_f1/packets/: factory.py  parser.py
neptune_f1/packets/f12021/: __init__.py  packet_car_damage_data.py  packet_car_telemetry_data.py  packet_event_data.py  packet_final_classification_data.py  packet_lap_data.py  packet_lobby_info_data.py  packet_motion_data.py  packet_session_history_data.py  utils.py
neptune_f1/sources/: udp_server.py
old_src/: factory.py  parser.py
old_src/domain/: car_status.py  cat_setup.py  final_classification.py  lap.py  utils.py
old_src/sources/: file.py  old_udp_server.py
src/neptune_f1/: __init__.py  from_file.py  metric_over_lap_period.py  to_neptune.py
src/neptune_f1/domain/: car_damage.py  event.py  session.py  session_history.py
src/neptune_f1/packets/: factory.py  parser.py
src/neptune_f1/packets/codemasters_f12021/: __init__.py  packet_car_damage_data.py  packet_car_setup_data.py  packet_car_status_data.py  packet_car_telemetry_data.py  packet_event_data.py  packet_final_classification_data.py  packet_header.py  packet_lap_data.py  packet_lobby_info_data.py  packet_motion_data.py  packet_participant_data.py  packet_session_data.py  packet_session_history_data.py  surfaces.py  utils.py
src/neptune_f1/sources/: udp_server.py
src/neptune_f1/udp/: __init__.py  server.py
telemetry/domain/: event.py  final_classification.py
telemetry/packets/: factory.py
telemetry/packets/f12021/: packet_car_setup_data.py  packet_car_status_data.py  packet_final_classification_data.py  packet_header.py  packet_participants_data.py  packet_session_data.py
telemetry/sources/: file.py  old_udp_server.py
tests/: test_parser.py
tests/features/steps/: tutorial.py
tests/integration/: test_parser.py
tests/unit/: test_metric_over_lap_period.py  test_packet_car_damage_data.py  test_packet_car_setup_data.py  test_packet_car_status_data.py  test_packet_car_telemetry_data.py  test_packet_event_data.py  test_packet_final_classification_data.py  test_packet_header.py  test_packet_lap_data.py  test_packet_lobby_info_data.py  test_packet_motion_data.py  test_packet_participants_data.py  test_packet_session_data.py  test_packet_session_history_data.py  test_raw_structures.py
tests/unit/packets/: test_packet_car_damage_data.py  test_packet_car_setup_data.py  test_packet_event_data.py  test_packet_header.py  test_packet_session_history_data.py
(+17 files in other folders)
