[tool.poetry]
authors = ["Rafal Jankowski <rafal@jankovsky.dev>"]
description = "EA F1 2021 telemetry integration with Neptune.ai"
homepage = "https://github.com/Raalsky/neptune-f1"
include = ["CHANGELOG.md", "CODE_OF_CONDUCT.md"]
license = "MIT"
maintainers = ["Rafal Jankowski <rafal@jankovsky.dev>"]
name = "neptune-f1"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
language-version = "python3"
target-version = [ "py310" ]
line-length = 120
include = '\.pyi?$'

[flake8]
max-line-length = 120
additional-dependencies = [
    "pep8-naming",
    "flake8-black",
    "flake8-import-order",
    "flake8-annotations"
]
