[tool.poetry]
authors = ["Rafal Jankowski <rafal@jankovsky.dev>"]
description = "EA F1 2021 telemetry integration with Neptune.ai"
homepage = "https://github.com/Raalsky/neptune-f1"
include = ["CHANGELOG.md"]
license = "MIT"
maintainers = ["Rafal Jankowski <rafal@jankovsky.dev>"]
name = "neptune-f1"
readme = "README.md"
version = "0.0.0"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1.3"
mypy = "^0.971"
behave = "^1.2.6"
coverage = "^6.4.4"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^(?:[\\w-]+-)?(?P<base>[vV]?\\d+(?:\\.\\d+){0,2}[^\\+]*)(?:\\+.*)?$"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
language-version = "python3"
target-version = [ "py310" ]
line-length = 120
include = '\.pyi?$'

[flake8]
max-line-length = 120
additional-dependencies = ["pep8-naming", "flake8-black", "flake8-import-order", "flake8-annotations"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
exclude = ['^tests/.*$', '^src/neptune_f1/packets/.*$']

[tool.behave]
paths = "tests/features"
