[tool.poetry]
authors = ["Rafal Jankowski <rafal@jankovsky.dev>"]
description = "EA F1 2021 telemetry integration with Neptune.ai"
homepage = "https://github.com/Raalsky/neptune-f1"
include = ["CHANGELOG.md"]
license = "MIT"
maintainers = ["Rafal Jankowski <rafal@jankovsky.dev>"]
name = "neptune-f1"
readme = "README.md"
version = "0.0.0"

[tool.poetry.dependencies]
python = "^3.10"

# Dev dependencies
pre-commit = { version = "^2.20.0", optional = true }
pytest = { version = "^7.1.3", optional = true }
mypy = { version = "^0.971", optional = true }
behave = { version = "^1.2.6", optional = true }
coverage = { version = "^6.4.4", optional = true }

[tool.poetry.extras]
dev = ["pre-commit", "pytest", "mypy", "behave", "coverage",]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
pattern = "default-unprefixed"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.isort]
profile = "black"
line_length = 120
skip_glob = "^(old_src)"

[tool.black]
language-version = "python3"
target-version = [ "py310" ]
line-length = 120
include = '\.pyi?$'

[flake8]
max-line-length = 120
additional-dependencies = ["pep8-naming", "flake8-black", "flake8-import-order", "flake8-annotations"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict_optional = false
files = ["src/neptune_f1"]
exclude = ["old_src/"]

[tool.behave]
paths = "tests/features"
